--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^20.17.30",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "eslint": "^9.25.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
