--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # testing
 /coverage
+TEST_PLAN.txt
 
 # next.js
 /.next/
@@ -19,6 +20,7 @@
 # misc
 .DS_Store
 *.pem
+/.swc
 
 # debug
 npm-debug.log*
@@ -41,6 +43,3 @@ next-env.d.ts
 
 # image backups (not pushed to production)
 /backup
-
-# test planning
-TEST_PLAN.txt
